New feature 259: Thumbnail from image URL

--- a/WebContent/WEB-INF/zul/renderer/edit_fields.zul
+++ b/WebContent/WEB-INF/zul/renderer/edit_fields.zul
@@ -19,6 +19,7 @@
 	<listhead>
 		<listheader label="Field / Snippet" />
 		<listheader label="URL Field" />
+		<listheader label="Widget" />
 		<listheader label="Action" align="center" width="150px" />
 	</listhead>
 	<auxhead>
@@ -48,6 +49,15 @@
 				</template>
 			</listbox>
 		</auxheader>
+		<auxheader>
+			<listbox model="@load(renderer.widgetList)"
+				selectedItem="@bind(renderer.currentRendererField.widgetName)"
+				mold="select">
+				<template name="model">
+					<listitem label="@load(each)" />
+				</template>
+			</listbox>
+		</auxheader>
 		<auxheader align="center">
 			<button tooltiptext="Add a field"
 				visible="@load(renderer.notFieldSelected)"
@@ -69,6 +79,7 @@
 				<label value="@load(rendererFieldItem.fieldName)" />
 			</listcell>
 			<listcell label="@load(rendererFieldItem.urlFieldName)" />
+			<listcell label="@load(rendererFieldItem.widgetName)" />
 			<listcell>
 				<button tooltiptext="Move the field up"
 					image="/images/arrow_top.png"
