PDF Viewer works: Test it using this (replace oss-1.4 with your path, and  index= with the name of the index) http://localhost:8080/oss-1.4/viewer.zul?uri=http://www.open-search-server.com/oss-test/pdf/tools.pdf&index=webtest

--- a/WebContent/viewer.zul
+++ b/WebContent/viewer.zul
@@ -15,7 +15,7 @@
 	<progressmeter visible="@load(viewer.downloading)" width="100%"
 		value="@load(viewer.downloadPercent)" />
 	<image visible="@load(viewer.downloaded)"
-		src="@load(viewer.currentImage)" />
+		content="@load(viewer.currentImage)" />
 	<label visible="@load(viewer.error)"
 		value="@load(viewer.errorMessage)" />
 	<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
