--- a/WebContent/viewer.zul
+++ b/WebContent/viewer.zul
@@ -1,23 +1,42 @@
-<window apply="org.zkoss.bind.BindComposer" border="normal"
-	title="PDF Viewer"
-	viewModel="@id('viewer') @init('com.jaeksoft.searchlib.web.controller.ViewerController')">
-	<caption>
-		<label value="page: " />
-		<button label="&lt;" onClick="@command('onPageDown')" />
-		<intbox value="@bind(viewer.page)" cols="3" />
-		<button label="&gt;" onClick="@command('onPageUp')" />
-		<space />
-		<label value="zoom: " />
-		<button label="-" onClick="@command('onZoomDown')" />
-		<intbox value="@bind(viewer.zoom)" cols="3" />
-		<button label="+" onClick="@command('onZoomUp')" />
-	</caption>
-	<progressmeter visible="@load(viewer.downloading)" width="100%"
-		value="@load(viewer.downloadPercent)" />
-	<image visible="@load(viewer.downloaded)"
-		content="@load(viewer.currentImage)" />
-	<label visible="@load(viewer.error)"
-		value="@load(viewer.errorMessage)" />
-	<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
-		running="@load(viewer.downloading)" />
-</window>
+<zk>
+	<style>body { padding: 0 0; }</style>
+	<window apply="org.zkoss.bind.BindComposer" height="100%"
+		width="100%" border="none"
+		viewModel="@id('viewer') @init('com.jaeksoft.searchlib.web.controller.ViewerController')">
+		<borderlayout>
+			<north border="none">
+				<toolbar>
+					<label value="Page: " />
+					<button label="&lt;"
+						onClick="@command('onPageDown')" />
+					<intbox value="@bind(viewer.page)" cols="3" />
+					<button label="&gt;" onClick="@command('onPageUp')" />
+					<space />
+					<label value="Zoom: " />
+					<button label="-" onClick="@command('onZoomDown')" />
+					<intbox value="@bind(viewer.zoom)" cols="3" />
+					<button label="+" onClick="@command('onZoomUp')" />
+					<space />
+					<button label="Download"
+						onClick="@command('onDownload')" />
+				</toolbar>
+			</north>
+			<center autoscroll="true" border="normal">
+				<image visible="@load(viewer.downloaded)"
+					content="@load(viewer.currentImage)" />
+			</center>
+			<south border="none">
+				<toolbar>
+					<hbox align="center">
+						<label value="@load(viewer.message)" />
+						<progressmeter
+							visible="@load(viewer.downloading)"
+							value="@load(viewer.downloadPercent)" />
+					</hbox>
+				</toolbar>
+			</south>
+		</borderlayout>
+		<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
+			running="@load(viewer.downloading)" />
+	</window>
+</zk>
