- Add redirectionUrl field in Web Crawler - Fixes the issue with Scheduler list when switching index - New Restful service: Action

--- a/WebContent/WEB-INF/zul/crawler/web/manualcrawl.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/manualcrawl.zul
@@ -42,7 +42,15 @@
 								value="@load(manualCrawl.crawlThread.currentUrlItem.url)" />
 						</auxheader>
 					</auxhead>
-					<columns>
+					<auxhead
+						visible="@load(manualCrawl.crawlThread.currentUrlItem.redirection)">
+						<auxheader colspan="4" align="center">
+							<label value="Redirect: " />
+							<label
+								value="@load(manualCrawl.crawlThread.currentUrlItem.redirectionUrl)" />
+						</auxheader>
+					</auxhead>
+					<columns visible="false">
 						<column align="right" width="150px" />
 						<column align="left" />
 						<column align="right" width="150px" />
