--- a/WebContent/WEB-INF/zul/schema/parser/edit_mimes.zul
+++ b/WebContent/WEB-INF/zul/schema/parser/edit_mimes.zul
@@ -14,26 +14,29 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<zk>
-	<hbox align="center">
-		<label value="Enter a MIME type to add: " />
-		<textbox cols="50" value="@bind(parser.currentMimeType)" />
-		<button label="Add" onClick="@command('onAddMimeType')" />
-	</hbox>
-	<grid width="100%" visible="@load(parser.parserMimeType)"
-		model="@load(parser.currentParser.mimeTypeSet)">
-		<columns>
-			<column label="MIME type" />
-			<column label="Action" />
-		</columns>
-		<rows>
-			<template name="model" var="mimeTypeItem">
-				<row>
-					<label value="@load(mimeTypeItem)" />
-					<image src="/images/action_delete.png"
-						onClick="@command('onDeleteMimeType', mimeTypeItem=mimeTypeItem)" />
-				</row>
-			</template>
-		</rows>
-	</grid>
-</zk>
+<grid model="@load(parser.currentParser.mimeTypeSet)"
+	emptyMessage="No MIME type">
+	<auxhead>
+		<auxheader colspan="2">
+			<hbox align="center">
+				<label value="Enter a MIME type to add: " />
+				<textbox cols="50"
+					value="@bind(parser.currentMimeType)" />
+				<button label="Add" onClick="@command('onAddMimeType')" />
+			</hbox>
+		</auxheader>
+	</auxhead>
+	<columns>
+		<column label="MIME type" hflex="min" />
+		<column label="Action" />
+	</columns>
+	<rows>
+		<template name="model" var="mimeTypeItem">
+			<row>
+				<label value="@load(mimeTypeItem)" />
+				<image src="/images/action_delete.png"
+					onClick="@command('onDeleteMimeType', mimeTypeItem=mimeTypeItem)" />
+			</row>
+		</template>
+	</rows>
+</grid>
