--- a/WebContent/WEB-INF/zul/runtime/advanced.zul
+++ b/WebContent/WEB-INF/zul/runtime/advanced.zul
@@ -20,6 +20,7 @@
 		<tabs>
 			<tab id="tabOcr" label="Optical Character Recognition"
 				selected="true" />
+			<tab id="tabSmtp" label="Mail server" />
 			<tab id="tabMisc" label="Miscellaneous" />
 		</tabs>
 		<tabpanels>
@@ -49,17 +50,6 @@
 								value="Enter the path to the Tesseract executable Eg.: /usr/local/bin/tesseract" />
 						</row>
 						<row>
-							<label value="Hocr2pdf path" />
-							<cell>
-								<textbox cols="80"
-									value="@bind(advanced.ocrManager.hocr2pdfPath)" />
-								<button label="Check"
-									onClick="@command('onCheckHocr2pdf')" />
-							</cell>
-							<label
-								value="Enter the path to the hocr2pdf executable Eg.: /usr/bin/hocr2pdf" />
-						</row>
-						<row>
 							<label value="Tesseract default language" />
 							<listbox mold="select"
 								selectedItem="@bind(advanced.ocrManager.defaultLanguage)"
@@ -71,6 +61,72 @@
 							</listbox>
 							<label
 								value="Enter the default language used by Tesseract" />
+						</row>
+					</rows>
+				</grid>
+			</tabpanel>
+			<tabpanel fulfill="tabSmtp.onSelect">
+				<grid>
+					<columns>
+						<column align="right" hflex="min" />
+						<column align="left" hflex="min" />
+						<column align="left" />
+					</columns>
+					<rows>
+						<row>
+							<label value="SMTP username" />
+							<textbox cols="50"
+								value="@bind(advanced.clientFactory.smtpUsername.value)" />
+							<label
+								value="The user name for authentication on mail server." />
+						</row>
+						<row>
+							<label value="SMTP password" />
+							<textbox cols="50" type="password"
+								value="@bind(advanced.clientFactory.smtpPassword.value)" />
+							<label
+								value="The password for authentication mail server." />
+						</row>
+						<row>
+							<label value="SMTP hostname" />
+							<textbox cols="50"
+								value="@bind(advanced.clientFactory.smtpHostname.value)" />
+							<label
+								value="The name of the outgoing mail server." />
+						</row>
+						<row>
+							<label value="SMTP port:" />
+							<intbox cols="5"
+								value="@bind(advanced.clientFactory.smtpPort.value)" />
+							<label
+								value="The port of the mail server. Usually: 25, 465 or 587." />
+						</row>
+						<row>
+							<label value="SMTP use SSL:" />
+							<checkbox
+								checked="@bind(advanced.clientFactory.smtpUseSsl.value)" />
+							<label
+								value="Use Secure Sockets Layer (SSL)" />
+						</row>
+						<row>
+							<label value="SMTP use TLS:" />
+							<checkbox
+								checked="@bind(advanced.clientFactory.smtpUseTls.value)" />
+							<label
+								value="Use Transport Layer Security (TLS)" />
+						</row>
+						<row>
+							<label value="Sender e-mail" />
+							<textbox cols="80"
+								value="@bind(advanced.clientFactory.smtpSenderEmail.value)" />
+							<label
+								value="The e-mail adress of the sender." />
+						</row>
+						<row>
+							<label value="Sender name" />
+							<textbox cols="50"
+								value="@bind(advanced.clientFactory.smtpSenderName.value)" />
+							<label value="The name sender." />
 						</row>
 					</rows>
 				</grid>
