--- a/WebContent/WEB-INF/zul/crawler/web/pattern.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/pattern.zul
@@ -53,7 +53,11 @@
 		multiple="@load(pattern.webCrawlerEditPatternsRights)"
 		model="@load(pattern.patternList)">
 		<template name="model">
-			<listitem label="@load(each.pattern)" />
+			<listitem>
+				<listcell>
+					<label value="@load(each.pattern)" />
+				</listcell>
+			</listitem>
 		</template>
 		<listfoot>
 			<listfooter>
