Fixes bug #166 on OSS1.4beta: Query -> More like This causes Property 'name' not found on type java.lang.String

--- a/WebContent/WEB-INF/zul/query/search/moreLikeThis.zul
+++ b/WebContent/WEB-INF/zul/query/search/moreLikeThis.zul
@@ -64,7 +64,7 @@
 					</listhead>
 					<template name="model" var="mltField">
 						<listitem>
-							<listcell label="@load(mltField.name)" />
+							<listcell label="@load(mltField)" />
 							<listcell>
 								<button tooltiptext="Remove the field"
 									image="/images/action_delete.png"
