Bug fix 169: java.lang.NullPointerException on flush expired contend from cash

--- a/WebContent/WEB-INF/zul/runtime/crawlCache.zul
+++ b/WebContent/WEB-INF/zul/runtime/crawlCache.zul
@@ -27,8 +27,7 @@
 				<rows>
 					<row>
 						<label value="Enabled" />
-						<checkbox
-							checked="@bind(crawlcache.crawlCacheManager.enabled)"
+						<checkbox checked="@bind(crawlcache.enabled)"
 							onCheck="@command('reload')" />
 						<space />
 					</row>
